@@ -1,4 +1,4 @@
 Revelation was written by:
 
-Erik Grinaker <erikg@wired-networks.net>
+Erik Grinaker <erikg@codepoet.no>
 
