@@ -1,5 +1,7 @@
-Revelation is a password manager for the GNOME 2 desktop. It organizes
-accounts in a tree structure, and stores them as AES-encrypted XML.
+Revelation is a password manager for the GNOME 2 desktop, released
+under the GNU GPL license. It stores accounts and passwords in a single,
+secure place, and gives access to them through a user-friendly graphical
+interface.
 
-The project website is located at http://oss.wired-networks.net/revelation/
+The project website is located at http://oss.codepoet.no/revelation/
 
