@@ -9,7 +9,7 @@ setup(
 	version		= '0.3.0',
 	description	= 'Password manager for GNOME 2',
 	author		= 'Erik Grinaker',
-	author_email	= 'erikg@wired-networks.net',
+	author_email	= 'erikg@codepoet.no',
 	url		= 'http://oss.codepoet.no/revelation/',
 
 	packages	= [ 'revelation', 'revelation.datahandler' ],
